--- a/formulario.html
+++ b/formulario.html
@@ -23,12 +23,12 @@
 				<div class="passo passo1">
 					<div class="form__input">
 						<label class="placeholder__text" for="Nome">Nome</label>
-						<input type="text" class="nome input" name="nome">
+						<input type="text" id="nome" class="nome input" name="nome">
 					</div>
 
 					<div class="form__input">
 						<label class="placeholder__text" for="email">E-mail</label>
-						<input type="email" class="email input" name="email">
+						<input type="email" id="email" class="email input" name="email">
 					</div>
 
 					<div class="form__input">
@@ -542,13 +542,15 @@
 						</div>
 					</div>
 				</div>
+
+				<div id="pagi"></div>
 			</form>
 		</div>
 	</main>
 
 	<footer class="footer">
 		<div class="wrapper">
-			<div id="pagi"></div>
+			<!-- <div id="pagi"></div> -->
 		</div>
 	</footer>
 
