--- a/formulario.html
+++ b/formulario.html
@@ -548,15 +548,10 @@
 		</div>
 	</main>
 
-	<footer class="footer">
-		<div class="wrapper">
-			<!-- <div id="pagi"></div> -->
-		</div>
-	</footer>
+	<footer class="footer"></footer>
 
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="src/js/lib/jquery.validate.min.js"></script>
-
 
 	<script src="src/js/app/init.js"></script>
 </body>
