--- a/obrigado.html
+++ b/obrigado.html
@@ -24,7 +24,7 @@
 					Suas informações foram recebidas, aguarde que você já será chamado(a).
 				</p>
 
-				<a href="javascript:void(0);" class="box-home__link" title="Clique aqui para reiniciar">Clique aqui para reiniciar</a>
+				<a href="formulario.html" class="box-home__link" title="Clique aqui para reiniciar">Clique aqui para reiniciar</a>
 			</div>
 		</div>
 	</main>
